# studentscore

./: .gitignore  README.md  Tasks-temp.md  pyproject.toml  requirements.txt  run.sh
.github/: github-actions.yml
.github/instructions/: notebook.instructions.md
data/featured/: derived_features.csv  derived_features_audit.json  feature_definitions.json  interaction_definitions.json
data/modeling_outputs/: algorithm_implementation_summary.json  alternative_interpretability_comprehensive.json  best_model_linear_regression_fixed.joblib  best_model_selection_fixed.json  clean_dataset_validation.json  comprehensive_performance_investigation.json  cv_framework_test_results.json  data_leakage_analysis.json  dataset_cleaning_metadata.json  deployment_documentation_comprehensive.json  deployment_readiness_assessment.json  external_validation_results.json  feature_documentation_integration_audit.json  gradient_boosting_config.json  infrastructure_test_metrics.json  integration_testing_results.json  linear_regression_config.json  model_comparison_investigation.json  model_comparison_results.json  model_registry.json  model_registry_summary.json  overfitting_analysis.json  perfect_performance_analysis.json  perfect_performance_fix_results.json  phase5_complete_fixed_results.json  phase6_task4_documentation_summary.json  random_forest_config.json  ridge_regression_hyperparameter_results.json  ridge_regression_metrics.json  robustness_analysis_results.json  shap_analysis_fix_results.json  shap_interpretability_analysis.json  simplified_external_validation.json  student_score_predictions.csv  svr_config.json  target_imbalance_analysis.json  (+1 more)
notebook/: eda.py
specs/: TASKS.md
src/: main.py
tests/: test_phase3_implementations.py  test_phase3_simple.py  test_phase4_implementations.py  test_phase6_task1_perfect_performance.py
(+79 files in other folders)
